@@ -1,3 +1,8 @@
+2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* client-src/client_util.c: Improve parsing of estimate scripts
+	* client-src/sendsize.c: Fail estimate if script fail
+	* server-src/planner.c: continue parsing after ERROR line
+
 2016-05-10  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/amgtar.pl: Fix path
 
